src/assets/css/style.scss
/*!
 * Name    : Visual Portfolio
 * Version : 1.0.0
 * Author  : _nK https://nkdev.info
 */
.vp-portfolio {
    margin-top: 40px;
    margin-bottom: 40px;
}
.vp-portfolio,
.vp-portfolio__items {
    position: relative;
    overflow: hidden;
}
.vp-portfolio,
.vp-portfolio * {
    box-sizing: border-box;
}
.vp-portfolio__items {
    transition: 0.5s height ease-in-out;
}

.vp-portfolio:after,
.vp-portfolio__items:after {
    content: '';
    display: block;
    clear: both;
}

.vp-portfolio__item-wrap {
    position: relative;
    overflow: hidden;
}

.vp-portfolio__item {
    position: relative;
    width: 33.333%;
    float: left;
    opacity: 0;
    visibility: hidden;
    transition: .7s opacity, .7s visibility;
}
.vp-portfolio__item .vp-portfolio__item-img img,
.vp-portfolio__item .vp-portfolio__item-img a {
    display: block;
    width: 100%;
    height: auto;
}

// Preloader
.vp-portfolio__preloader {
    position: absolute;
    visibility: visible;
    left: 50%;
    margin-left: -15px;
    width: 23px;
    height: 24px;
    margin-top: 20px;
    opacity: 0.5;
    transition: .7s opacity, .7s visibility;
    animation: vp-preloader 2s linear infinite;

    span {
        position: absolute;
        display: block;
        top: 0;
        left: 0;
        width: 10px;
        height: 7px;
        background-color: #8a8a8a;

        &:nth-of-type(1) {
            height: 14px;
        }
        &:nth-of-type(2) {
            left: 12px;
        }
        &:nth-of-type(3) {
            top: 16px;
        }
        &:nth-of-type(4) {
            left: 12px;
            height: 14px;
            top: 9px;
        }
    }
}

@keyframes vp-preloader {
    0%, 100% {
        opacity: 0.5;
    }
    40%, 60% {
        opacity: 1;
    }
}

// Tiles
[data-vp-layout="tiles"] {
    .vp-portfolio__item-img img,
    .vp-portfolio__item-img-wrap {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
    }
    .vp-portfolio__item-img {
        position: relative;
        display: block;
        overflow: hidden;

        &:before {
            content: '';
            display: block;
            margin-top: 56%;
        }
    }
    .vp-portfolio__item-img img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: 50% 50%;
    }
}

// Justified
[data-vp-layout="justified"] {
    .vp-portfolio__item {
        position: absolute;
    }
}

// On loaded portfolio
.vp-portfolio {
    max-height: 65px;
}
.vp-portfolio.vp-portfolio__ready {
    max-height: none;

    .vp-portfolio__item,
    .vp-filter,
    .vp-pagination {
        opacity: 1;
        visibility: visible;
    }
    .vp-portfolio__preloader {
        opacity: 0;
        visibility: hidden;
        animation: none;
    }
}

// Filter
.vp-filter {
    opacity: 0;
    visibility: hidden;
    transition: .7s opacity, .7s visibility;
}

// Pagination
.vp-pagination {
    opacity: 0;
    visibility: hidden;
    transition: .7s opacity, .7s visibility;
}

// PhotoSwipe
.vp-pswp {
    z-index: 100000;

    .pswp__caption {
        background-color: rgba(0, 0, 0, 0.75);

        > div {
            max-width: 600px;
            color: #fff;
            font-size: 12px;
        }

        a {
            color: inherit;

            &:hover {
                opacity: 0.8;
            }
        }
        .nk-portfolio__item-meta-title {
            color: inherit;
            margin-top: 0;
            margin-bottom: 3px;
            font-size: 14px;

            a {
                text-decoration: none;
            }
        }
    }
}

